# Trispr_Flow

./: .env  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  APP_FLOW.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  FIRST_RUN.bat  FRONTEND_GUIDELINES.md  GEMINI.md  LESSONS.md  README.md  READ_ME_FIRST.md  ROADMAP.md  ROADMAP.md.tmp.24324.1773745868710  ROADMAP.md.tmp.24324.1773745879083  ROADMAP.md.tmp.24324.1773747725131  ROADMAP.md.tmp.24324.1773747733955  SCOPE.md  SECURITY.md  SIMPLIFY.md  STATUS.md  THIRD_PARTY_NOTICES.md  TRANSCRIBE_PLAN.md  assistant-presence.html  build-both-installers.bat  build-quantize.bat  build-whisper-server.ps1  build_installers.bat  build_unified.bat  download-piper.ps1  index.html  index.html.tmp.47664.1773757709147  overlay.html  package-lock.json  (+8 more)
.claude/: ACCESSIBILITY_AUDIT.md  INSTALLATION_SUMMARY.md  ROADMAP.md  SKILLS_AND_AGENTS_GUIDE.md
.github/: copilot-instructions.md  pull_request_template.md
analysis-module/: ANALYSIS_MODULE_SPEC.md  ARCHITECTURE.md  PRODUCT_SCOPE.md  README.md  ROADMAP.md
analysis-tool/: README.md  requirements.txt
docs/: AGENT_EVOLUTION_ROADMAP.md  APP_FLOW.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_0.7.md  AUDIT-BRIEF.md  BLOCK_E_BACKLOG.md  BRANCHING.md  CLIPBOARD_RESTORE_QA.md  CLOUD_FALLBACK.md  COMPETITOR_ANALYSIS_HANDY.md  CONTINUOUS_DUMP_PLAN.md  DECISIONS.md  DECISIONS_EXPERT_MODE.md  DEPENDENCY_POLICY.md  DEVELOPMENT.md  DOC_SYNC_CONFLICTS.md  EXPORT_GUIDE.md  EXPORT_SCHEMA.md  FRONTEND_GUIDELINES.md  GDD_MODULE_WORKFLOW.md  INSTALLER_VARIANTS.md  KNOWN_ISSUES.md  LESSONS.md  MANUAL_UXQA_REPORT_2026-02-20.md  MODEL_MANAGER_BACKEND_CARDS.md  MODULE-DELIVERY-FEASIBILITY.md  MODULE-PUBLISHING.md  N11_TTS_BENCHMARK.md  NEXT_BLOCK_G.md  OPUS_PIPELINE_DESIGN.md  OVERLAY_DEEP_DIVE_2026-02-26.md  README.md  RELEASE_QA_CHECKLIST.md  SECURITY.md  SESSION_2026-03-23_RECOVERY_ASSISTANT_RUNBOOK.md  STATE_MANAGEMENT.md  (+21 more)
module-sidecars/opus/: Cargo.toml  README.md  trispr-module.json
module-sidecars/opus/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.cuda.analysis.json  tauri.conf.json  tauri.conf.vulkan.json
src-tauri/assets/video_templates/: caption.html.tmpl  narrative.html.tmpl  slideshow.html.tmpl
src-tauri/capabilities/: default.json
src-tauri/icons/: ICON_README.md
src-tauri/module-packages/gdd/: trispr-module.json
src-tauri/module-packages/gdd/templates/: universal-strict.md
src-tauri/module-packages/piper/: trispr-module.json
src-tauri/nsis/: analysis_tool_shared.nsh  download-piper-voices.ps1  hooks.cuda.analysis.nsh  hooks.nsh  hooks.vulkan.nsh  voice_analysis_shared.nsh
src-tauri/runtime-manifests/: vulkan-v0.8.4-hotfix.json
src-tauri/src/: assistant_presence.rs  audio.rs  auto_processing.rs  constants.rs  continuous_dump.rs  data_migration.rs  errors.rs  history_partition.rs  hotkeys.rs  lib.rs  lib.rs.tmp.42636.1773773953021  lib.rs.tmp.42636.1773773974409  lib.rs.tmp.42636.1773774145483  lib.rs.tmp.42636.1773774149478  main.rs  models.rs  multimodal_io.rs  narrative_composer.rs  ollama_runtime.rs  opus.rs  overlay.rs  paste_arbiter.rs  paths.rs  postprocessing.rs  refinement_adaptation.rs  runtime_commands.rs  session_manager.rs  settings.rs  sidecar.rs  sidecar_process.rs  state.rs  transcription.rs  tts_benchmark.rs  uiautomation_capture.rs  util.rs  video_generation.rs  video_ingest.rs  weather.rs  whisper_server.rs  workflow_agent.rs
src-tauri/src/ai_fallback/: commands.rs  error.rs  keyring.rs  mod.rs  models.rs  provider.rs  provider.rs.tmp.24324.1773747297484  provider.rs.tmp.47664.1773754733033  provider.rs.tmp.47664.1773757084167
src-tauri/src/confluence/: keyring.rs
src-tauri/src/gdd/: confluence.rs  extraction.rs  mod.rs  presets.rs  publish_queue.rs  recognition.rs  render_storage.rs  synthesis.rs  template_sources.rs  validation.rs
src-tauri/src/modules/: delivery.rs  health.rs  lifecycle.rs  lifecycle_coordinator.rs  mod.rs  package.rs  permissions.rs  registry.rs  runtime.rs  task_capture.rs
(+219 files in other folders)
