[package]
name = "trispr-flow"
version = "0.7.3"
description = "Offline dictation tool with tray + hotkey control"
authors = ["trist"]
edition = "2021"
default-run = "trispr-flow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trispr_flow_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "trispr-flow"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.24"
cpal = "0.15"
enigo = "0.1"
arboard = "3"
ureq = { version = "2", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rfd = "0.14"
sha2 = "0.10"
hex = "0.4"
url = "2"
regex = "1"
which = "6.0"
hound = "3.5"
chrono = "0.4"
keyring = "2.3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
lopdf = "0.32"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

[target."cfg(target_os = \"windows\")".dependencies]
wasapi = "0.22"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
windows = { version = "0.59", features = ["Win32_Graphics_Dxgi", "Win32_System_LibraryLoader"] }

[patch.crates-io]
global-hotkey = { path = "../vendor/global-hotkey-0.7.0" }
